<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">我来也</string>
    <string name="action_settings">Settings</string>
    <string name="btn_sign">开始签到</string>
    <string name="btn_call">开始点名</string>
    <string name="btn_submit">提交信息</string>
    <string name="btn_add">添加人员</string>  
    
    <string name="btn_stopCall">结束点名</string>
     <string name="btn_lookResult">查看结果</string>
    
    <string name="tv_sign">签到</string>
    <string name="tv_call">点名</string>
    <string name="tv_result">结果</string>
    
    <string name="tv_welcome">用户您好：</string>
    <string name="tv_ip">IP:获取失败</string>
    
    
    <string name="dialog_name">人员姓名：</string>
    <string name="dialog_phoneNum">电话号码：</string>
    
    <string name="tv_hint">
       	 tips：摇一摇，获取签到信息
    </string>
    <string name="tv_explain">
       	未到的学生信息如下：
    </string>
    <string name="tv_resultInfo">总人数:0   已到人数：0 未到人数:0
    </string>

</resources>