<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:background="#FF586771"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_call"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_call"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_sign"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_sign"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FF000000"
            android:gravity="center"
            android:text="@string/tv_result"
            android:textColor="#FFf4e13c"
            android:textSize="15sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFe8e8e8" >

        <TextView
            android:id="@+id/tv_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_resultInfo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_below="@+id/tv_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_explain" />

        <ListView
            android:layout_below="@+id/textView2"
            android:layout_above="@+id/linearLayout1"
            android:id="@+id/lv_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_lookResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_lookResult" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>